[package]
name = "rs_keylogget"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
rdev = { version = "0.5.3", features = ["serialize", "unstable_grab"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
